style: removing  false image's source

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<nav class="sticky top-0 z-10 navbar pb-4 transition duration-300">
 				<div class="flex justify-between items-center px-4">
 					<div>
-						<img class="w-[36px] cursor-pointer" src="./public/images/logo.png" alt="Netflix" />
+						<img class="w-[36px] cursor-pointer" src="../public/images/logo.png" alt="Netflix" />
 					</div>
 					<div class="flex items-center gap-4">
 						<svg
@@ -45,7 +45,7 @@
 							<line x1="21" y1="21" x2="16.89" y2="16.89"></line>
 						</svg>
 						<div class="rounded-sm overflow-hidden">
-							<img class="w-[24px] cursor-pointer" src="./public/images/avatar.png" alt="Avatar" />
+							<img class="w-[24px] cursor-pointer" src="../public/images/avatar.png" alt="Avatar" />
 						</div>
 					</div>
 				</div>
@@ -70,12 +70,12 @@
 					</li>
 				</ul>
 			</nav>
-			<div class="-mt-[97.4px] h-[55vh] bg-[url('./public/images/home.jpg')] bg-cover bg-center relative">
+			<div class="-mt-[97.4px] h-[55vh] bg-[url('../public/images/home.jpg')] bg-cover bg-center relative">
 				<div class="absolute bottom-0 h-[250px] bg-gradient-to-t from-black w-full"></div>
 				<div class="absolute bottom-0 h-[150px] bg-gradient-to-t from-black w-full"></div>
 				<div class="absolute bottom-0 h-[150px] bg-gradient-to-t from-black w-full"></div>
 				<div class="absolute left-1/2 transform -translate-x-1/2 bottom-4 w-full flex flex-col gap-2 items-center">
-					<img class="w-1/2" src="./public/images/title.png" alt="Wednesday" />
+					<img class="w-1/2" src="../public/images/title.png" alt="Wednesday" />
 					<div class="flex gap-2 text-white">
 						<span>Comedy</span>
 						<span>Horror</span>
@@ -146,7 +146,7 @@
 			<!-- Continue Watching Card -->
 			<div class="flex gap-2 overflow-x-scroll pb-4 touch mx-4">
 				<div class="min-w-[110px] bg-[#151515] rounded-md overflow-hidden">
-					<div class="h-[140px] bg-[url('./public/images/moneyheist.jpg')] bg-cover bg-top relative">
+					<div class="h-[140px] bg-[url('../public/images/moneyheist.jpg')] bg-cover bg-top relative">
 						<div
 							class="absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2 p-3 bg-opacity-70 bg-black rounded-full border-2 border-[#EEEEEE] w-fit"
 						>
@@ -195,7 +195,7 @@
 				</div>
 
 				<div class="min-w-[110px] bg-[#151515] rounded-md overflow-hidden">
-					<div class="h-[140px] bg-[url('./public/images/lookism.jpg')] bg-cover bg-center relative">
+					<div class="h-[140px] bg-[url('../public/images/lookism.jpg')] bg-cover bg-center relative">
 						<div
 							class="absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2 p-3 bg-opacity-70 bg-black rounded-full border-2 border-[#EEEEEE] w-fit"
 						>
@@ -244,7 +244,7 @@
 				</div>
 
 				<div class="min-w-[110px] bg-[#151515] rounded-md overflow-hidden">
-					<div class="h-[140px] bg-[url('./public/images/squidgames.jpg')] bg-cover bg-center relative">
+					<div class="h-[140px] bg-[url('../public/images/squidgames.jpg')] bg-cover bg-center relative">
 						<div
 							class="absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2 p-3 bg-opacity-70 bg-black rounded-full border-2 border-[#EEEEEE] w-fit"
 						>
@@ -293,7 +293,7 @@
 				</div>
 
 				<div class="min-w-[110px] bg-[#151515] rounded-md overflow-hidden">
-					<div class="h-[140px] bg-[url('./public/images/alice.jpg')] bg-cover bg-center relative">
+					<div class="h-[140px] bg-[url('../public/images/alice.jpg')] bg-cover bg-center relative">
 						<div
 							class="absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2 p-3 bg-opacity-70 bg-black rounded-full border-2 border-[#EEEEEE] w-fit"
 						>
@@ -342,7 +342,7 @@
 				</div>
 
 				<div class="min-w-[110px] bg-[#151515] rounded-md overflow-hidden">
-					<div class="h-[140px] bg-[url('./public/images/troll.jpg')] bg-cover bg-center relative">
+					<div class="h-[140px] bg-[url('../public/images/troll.jpg')] bg-cover bg-center relative">
 						<div
 							class="absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2 p-3 bg-opacity-70 bg-black rounded-full border-2 border-[#EEEEEE] w-fit"
 						>
@@ -396,7 +396,7 @@
 			<!-- Top 10 Movies -->
 			<div class="flex gap-8 overflow-x-scroll pb-4 touch mx-4">
 				<div
-					class="min-w-[110px] h-[150px] bg-[url('./public/images/traintobusan.jpg')] rounded-md bg-cover relative z-10 ml-6"
+					class="min-w-[110px] h-[150px] bg-[url('../public/images/traintobusan.jpg')] rounded-md bg-cover relative z-10 ml-6"
 				>
 					<div class="w-20 h-20 absolute bottom-0 -left-14">
 						<svg
@@ -416,7 +416,7 @@
 					</div>
 				</div>
 				<div
-					class="min-w-[110px] h-[150px] bg-[url('./public/images/allofus.jpg')] rounded-md bg-cover relative z-[9]"
+					class="min-w-[110px] h-[150px] bg-[url('../public/images/allofus.jpg')] rounded-md bg-cover relative z-[9]"
 				>
 					<div class="w-20 h-20 absolute bottom-0 -left-[60px]">
 						<svg
@@ -436,7 +436,7 @@
 					</div>
 					<div class="absolute bottom-0 bg-gradient-to-r from-black h-20 w-8 -left-10"></div>
 				</div>
-				<div class="min-w-[110px] h-[150px] bg-[url('./public/images/haikyu.jpg')] rounded-md bg-cover relative z-[8]">
+				<div class="min-w-[110px] h-[150px] bg-[url('../public/images/haikyu.jpg')] rounded-md bg-cover relative z-[8]">
 					<div class="w-20 h-20 absolute bottom-0 -left-[60px]">
 						<svg
 							id="rank-3"
@@ -456,7 +456,7 @@
 					<div class="absolute bottom-0 bg-gradient-to-r from-black h-20 w-8 -left-10"></div>
 				</div>
 				<div
-					class="min-w-[110px] h-[150px] bg-[url('./public/images/descendants.jpg')] rounded-md bg-cover relative z-[7]"
+					class="min-w-[110px] h-[150px] bg-[url('../public/images/descendants.jpg')] rounded-md bg-cover relative z-[7]"
 				>
 					<div class="w-20 h-20 absolute bottom-0 -left-[60px]">
 						<svg
@@ -477,7 +477,7 @@
 					<div class="absolute bottom-0 bg-gradient-to-r from-black h-20 w-8 -left-10"></div>
 				</div>
 				<div
-					class="min-w-[110px] h-[150px] bg-[url('./public/images/jumanji.jpg')] rounded-md bg-cover relative z-[6]"
+					class="min-w-[110px] h-[150px] bg-[url('../public/images/jumanji.jpg')] rounded-md bg-cover relative z-[6]"
 				>
 					<div class="w-20 h-20 absolute bottom-0 -left-[60px]">
 						<svg
@@ -498,7 +498,7 @@
 					<div class="absolute bottom-0 bg-gradient-to-r from-black h-20 w-8 -left-10"></div>
 				</div>
 				<div
-					class="min-w-[110px] h-[150px] bg-[url('./public/images/kotaro.jpeg')] rounded-md bg-cover relative z-[5]"
+					class="min-w-[110px] h-[150px] bg-[url('../public/images/kotaro.jpeg')] rounded-md bg-cover relative z-[5]"
 				>
 					<div class="w-20 h-20 absolute bottom-0 -left-[60px]">
 						<svg
@@ -518,7 +518,7 @@
 					</div>
 					<div class="absolute bottom-0 bg-gradient-to-r from-black h-20 w-8 -left-10"></div>
 				</div>
-				<div class="min-w-[110px] h-[150px] bg-[url('./public/images/aot.jpg')] rounded-md bg-cover relative z-[4]">
+				<div class="min-w-[110px] h-[150px] bg-[url('../public/images/aot.jpg')] rounded-md bg-cover relative z-[4]">
 					<div class="w-20 h-20 absolute bottom-0 -left-[60px]">
 						<svg
 							id="rank-7"
@@ -538,7 +538,7 @@
 					<div class="absolute bottom-0 bg-gradient-to-r from-black h-20 w-8 -left-10"></div>
 				</div>
 				<div
-					class="min-w-[110px] h-[150px] bg-[url('./public/images/spiderman.jpg')] rounded-md bg-cover relative z-[3]"
+					class="min-w-[110px] h-[150px] bg-[url('../public/images/spiderman.jpg')] rounded-md bg-cover relative z-[3]"
 				>
 					<div class="w-20 h-20 absolute bottom-0 -left-[60px]">
 						<svg
@@ -559,7 +559,7 @@
 					<div class="absolute bottom-0 bg-gradient-to-r from-black h-20 w-8 -left-10"></div>
 				</div>
 				<div
-					class="min-w-[110px] h-[150px] bg-[url('./public/images/rednotice.jpg')] rounded-md bg-cover relative z-[2]"
+					class="min-w-[110px] h-[150px] bg-[url('../public/images/rednotice.jpg')] rounded-md bg-cover relative z-[2]"
 				>
 					<div class="w-20 h-20 absolute bottom-0 -left-[60px]">
 						<svg
@@ -585,11 +585,11 @@
 
 			<!-- Trending Now -->
 			<div class="flex gap-2 overflow-x-scroll pb-4 touch mx-4">
-				<div class="min-w-[110px] h-[150px] bg-[url('./public/images/wednesday.jpg')] rounded-md bg-cover"></div>
-				<div class="min-w-[110px] h-[150px] bg-[url('./public/images/spyxfamily.jpeg')] rounded-md bg-cover"></div>
-				<div class="min-w-[110px] h-[150px] bg-[url('./public/images/extraordinary.jpg')] rounded-md bg-cover"></div>
-				<div class="min-w-[110px] h-[150px] bg-[url('./public/images/alchemy.jpg')] rounded-md bg-cover"></div>
-				<div class="min-w-[110px] h-[150px] bg-[url('./public/images/1899.jpg')] rounded-md bg-cover"></div>
+				<div class="min-w-[110px] h-[150px] bg-[url('../public/images/wednesday.jpg')] rounded-md bg-cover"></div>
+				<div class="min-w-[110px] h-[150px] bg-[url('../public/images/spyxfamily.jpeg')] rounded-md bg-cover"></div>
+				<div class="min-w-[110px] h-[150px] bg-[url('../public/images/extraordinary.jpg')] rounded-md bg-cover"></div>
+				<div class="min-w-[110px] h-[150px] bg-[url('../public/images/alchemy.jpg')] rounded-md bg-cover"></div>
+				<div class="min-w-[110px] h-[150px] bg-[url('../public/images/1899.jpg')] rounded-md bg-cover"></div>
 			</div>
 
 			<div class="mb-[64px]"></div>
