style: removing  false image's source

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<nav class="sticky top-0 z-10 navbar pb-4 transition duration-300">
 				<div class="flex justify-between items-center px-4">
 					<div>
-						<img class="w-[36px] cursor-pointer" src="../public/images/logo.png" alt="Netflix" />
+						<img class="w-[36px] cursor-pointer" src="./public/images/logo.png" alt="Netflix" />
 					</div>
 					<div class="flex items-center gap-4">
 						<svg
@@ -45,7 +45,7 @@
 							<line x1="21" y1="21" x2="16.89" y2="16.89"></line>
 						</svg>
 						<div class="rounded-sm overflow-hidden">
-							<img class="w-[24px] cursor-pointer" src="../public/images/avatar.png" alt="Avatar" />
+							<img class="w-[24px] cursor-pointer" src="./public/images/avatar.png" alt="Avatar" />
 						</div>
 					</div>
 				</div>
@@ -75,7 +75,7 @@
 				<div class="absolute bottom-0 h-[150px] bg-gradient-to-t from-black w-full"></div>
 				<div class="absolute bottom-0 h-[150px] bg-gradient-to-t from-black w-full"></div>
 				<div class="absolute left-1/2 transform -translate-x-1/2 bottom-4 w-full flex flex-col gap-2 items-center">
-					<img class="w-1/2" src="../public/images/title.png" alt="Wednesday" />
+					<img class="w-1/2" src="./public/images/title.png" alt="Wednesday" />
 					<div class="flex gap-2 text-white">
 						<span>Comedy</span>
 						<span>Horror</span>
