--- a/tailwind-components/index.html
+++ b/tailwind-components/index.html
@@ -24,7 +24,7 @@
   </head>
   <body class="bg-[#f8f8f8] font-jakarta-sans">
     <header class="h-20 w-full bg-black flex justify-center">
-      <div class="w-11/12 2xl:w-3/4 h-full flex justify-between items-center">
+      <div class="w-11/12 2xl:w-3/4 h-full flex justify-between items-center max-w-[1139.4px]">
         <div class="flex items-center h-full gap-[16px]">
           <img
             src="https://kampusmerdeka.kemdikbud.go.id/static/media/logo-pendidikan.92aef756.webp"
@@ -59,7 +59,7 @@
 
     <nav class="w-full h-[80px] hidden lg:flex justify-center ">
       <div
-        class="w-11/12 2xl:w-3/4 h-full flex items-center gap-2 font-jakarta-sans font-bold"
+        class="w-11/12 2xl:w-3/4 h-full flex items-center gap-2 font-jakarta-sans font-bold max-w-[1139.4px]"
       >
         <button
           type="button"
@@ -99,7 +99,7 @@
     </nav>
 
     <!--  -->
-    <main class="px-4 lg:px-0 w-full lg:w-3/4 mx-auto my-8 lg:my-16 flex flex-col gap-8">
+    <main class="px-4 lg:px-0 w-full lg:w-3/4 mx-auto my-8 lg:my-16 flex flex-col gap-8 max-w-[1139.4px]">
         <h1 class="ubuntu font-semibold text-4xl lg:text-5xl">Program Kampus Merdeka</h1>
         <div class="flex gap-4 flex-wrap">
             
@@ -364,8 +364,8 @@
     </footer>
 
     <!-- Desktop Footer -->
-    <footer class="hidden lg:flex justify-center bg-black h-[624px] w-full py-[80px]">
-      <div class="w-3/4 mx-auto h-full px-[12px] flex">
+    <footer class="hidden lg:flex justify-center bg-black h-[624px] w-full py-[80px] ">
+      <div class="w-3/4 mx-auto h-full px-[12px] flex max-w-[1139.4px]">
 
         <!-- 1 -->
         <div class="flex gap-6 w-1/2 p-4">
