Fix navbar issue

--- a/tailwind-components/index.html
+++ b/tailwind-components/index.html
@@ -23,8 +23,8 @@
     </style>
   </head>
   <body class="bg-[#f8f8f8] font-jakarta-sans">
-    <header class="h-20 lg:px-4 w-full bg-black flex justify-center">
-      <div class="md:w-full lg:w-full md:px-2 lg:px-0 md:h-full 2xl:w-3/4 h-full flex justify-between items-center max-w-[1139.4px]">
+    <header class="h-20 px-2 lg:px-4 w-full bg-black flex justify-center">
+      <div class="w-full md:w-full lg:w-full md:px-2 lg:px-0 md:h-full 2xl:w-3/4 h-full flex justify-between items-center max-w-[1139.4px]">
         <div class="flex items-center h-full gap-[16px]">
           <img
             src="https://kampusmerdeka.kemdikbud.go.id/static/media/logo-pendidikan.92aef756.webp"
