--- a/regular-expressions/index.html
+++ b/regular-expressions/index.html
@@ -1,30 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RegEx</title>
-    <link rel="stylesheet" href="../dist/output.css">
-</head>
-<body>
-    <section class="max-w-screen-xl h-screen flex flex-col gap-y-20 items-center justify-center mx-auto">
-        <p class="text-black font-semibold">Syarat Valid = Dimulai dengan angka</p>
-        
-        <!-- 221402009 - RAIHAN -->
-        <div class="relative w-full">
-            <input id="regexInputRaihan" type="text" name="regexInput" placeholder="RegExp" value="" class="relative w-full h-12 px-4 placeholder-transparent transition-all border rounded outline-none focus-visible:outline-none peer border-slate-200 text-slate-500 autofill:bg-white invalid:border-pink-500 invalid:text-pink-500 focus:border-blue-500 focus:outline-none invalid:focus:border-pink-500 disabled:cursor-not-allowed disabled:bg-slate-50 disabled:text-slate-400" />
 
-            <label for="regexLabel" class="cursor-text peer-focus:cursor-default peer-autofill:-top-2 absolute left-2 -top-2 z-[1] px-2 text-xs text-slate-400 transition-all before:absolute before:top-0 before:left-0 before:z-[-1] before:block before:h-full before:w-full before:bg-white before:transition-all peer-placeholder-shown:top-3 peer-placeholder-shown:text-base peer-required:after:text-pink-500 peer-required:after:content-['\00a0*'] peer-invalid:text-pink-500 peer-focus:-top-2 peer-focus:text-xs peer-focus:text-blue-500 peer-invalid:peer-focus:text-pink-500 peer-disabled:cursor-not-allowed peer-disabled:text-slate-400 peer-disabled:before:bg-transparent"> Your username </label>
-            
-            <small class="absolute flex justify-between w-full px-4 py-1 text-xs transition text-slate-400 peer-invalid:text-pink-500">
-                <span id="validation-text-raihan">Validation message.</span>
-                <span class="text-slate-500">1/10</span>
-            </small>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>RegEx</title>
+    <link rel="stylesheet" href="../dist/output.css" />
+</head>
+
+<body class="bg-[#dee1e8]">
+    <section class="max-w-screen-xl h-screen flex flex-col gap-y-8 items-center pt-16 px-8 mx-auto">
+        <h1 class="text-5xl font-bold text-black">Regular Expressions</h1>
+
+        <!-- Input 1 -->
+        <div class="w-full">
+            <p class="text-black font-semibold">
+                Validasi input dimulai dengan angka // Contoh: 1abcD
+            </p>
+
+            <div class="relative w-full">
+                <input id="regexInput1" type="text" name="regexInput" placeholder="RegExp" value=""
+                    class="regexInput" />
+
+                <small
+                    class="absolute flex justify-between w-full px-4 py-1 text-xs transition text-slate-400 peer-invalid:text-pink-500">
+                    <span id="validation-text-1">Validation message.</span>
+                </small>
+            </div>
         </div>
 
+        <!-- Input 2 -->
+        <div class="w-full">
+            <p class="text-black font-semibold">Validasi URL // Contoh: praktikum.imk </p>
+
+            <div class="relative w-full">
+                <input id="regexInput2" type="text" name="regexInput" placeholder="RegExp" value=""
+                    class="regexInput" />
+
+                <small
+                    class="absolute flex justify-between w-full px-4 py-1 text-xs transition text-slate-400 peer-invalid:text-pink-500">
+                    <span id="validation-text-2">Validation message.</span>
+                </small>
+            </div>
+        </div>
+
+        <!-- Input 3 -->
+        <div class="w-full">
+            <p class="text-black font-semibold">Validasi Email // Contoh: raihan@gmail.com</p>
+
+            <div class="relative w-full">
+                <input id="regexInput3" type="text" name="regexInput" placeholder="RegExp" value=""
+                    class="regexInput" />
+
+                <small
+                    class="absolute flex justify-between w-full px-4 py-1 text-xs transition text-slate-400 peer-invalid:text-pink-500">
+                    <span id="validation-text-3">Validation message.</span>
+                </small>
+            </div>
+        </div>
+
+        <!-- Input 4 -->
+        <div class="w-full">
+            <p class="text-black font-semibold">Validasi Kapital // Contoh: aaaaA</p>
+
+            <div class="relative w-full">
+                <input id="regexInput4" type="text" name="regexInput" placeholder="RegExp" value=""
+                    class="regexInput" />
+
+                <small
+                    class="absolute flex justify-between w-full px-4 py-1 text-xs transition text-slate-400 peer-invalid:text-pink-500">
+                    <span id="validation-text-4">Validation message.</span>
+                </small>
+            </div>
+        </div>
+
+        <!-- Input 5 -->
+        <div class="w-full">
+            <p class="text-black font-semibold">Validasi Duplicate Character // Contoh: 1234561</p>
+
+            <div class="relative w-full">
+                <input id="regexInput5" type="text" name="regexInput" placeholder="RegExp" value=""
+                    class="regexInput" />
+
+                <small
+                    class="absolute flex justify-between w-full px-4 py-1 text-xs transition text-slate-400 peer-invalid:text-pink-500">
+                    <span id="validation-text-5">Validation message.</span>
+                </small>
+            </div>
+        </div>
 
     </section>
 
     <script src="./js/script.js"></script>
 </body>
+
 </html>
